Add new ClangTidyPath option

--- a/ClangPowerTools/ClangPowerTools/ClangPowerTools.csproj
+++ b/ClangPowerTools/ClangPowerTools/ClangPowerTools.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Events\MissingLlvmEventArgs.cs" />
     <Compile Include="Events\VsHierarchyDetectedEventArgs.cs" />
     <Compile Include="Helpers\UIUpdater.cs" />
+    <Compile Include="Options\ClangTidyPathValue.cs" />
     <Compile Include="Options\ClangFormatPathValue.cs" />
     <Compile Include="Options\HeaderFiltersValue.cs" />
     <Compile Include="Options\Model\ClangTidyPredefinedChecksOptions.cs" />
